$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2014

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added hostname support to utils
		- added module for file drive input from LeapMotion device
	Backward compatibility issues:
	Known issues:
		- nested calls to string drive callers deadlock
	Bug fixes:
		- fixed build with RTAI configured without inlining
		- fixed math parser bug with function calls in expressions
		- fixed deadlock in recursive string parser calls

MBDyn 1.6.0
	Enhancements:
		- added central gravity field (suggested by Linh H. Phan)
		- added automatic differentiation support to drive callers
		  and constitutive laws (Reinhard Resch)
		- added (optional) modal joint reaction forces output
		- added runtime loadable file drivers
		- added generic joystick driver (module-hid)
		- added run-time loadable "description" registration
		- added "namespace" stmt (module-namespace)
		- added symbol table in namespaces (module-namespace)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix module-octave build and scripts installation
		  (Reinhard Resch)
		- fix initial assembly of viscoelastic deformable joint
		  (noted by Reinhard Resch)
		- fix python detection (David Verelst)
		- fix SparseSuite_config detection
		  (Marco Morandini; noted by David Verelst)
		- fixed (harmless) stmt parsing bug

MBDyn 1.5.6
	Enhancements:
		- added explicit cast to math parser
		- added loads fade-in in module-aerodyn
		  (Jens van Schelve, Patrick Rix)
		- added "drivep" (derivative) function to model namespace
		- added measures in aircraft instruments