@@ -14,6 +14,7 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added hostname support to utils
 		- added module for file drive input from LeapMotion device
+		- rod without offset now works with displacement nodes
 	Backward compatibility issues:
 	Known issues:
 		- nested calls to string drive callers deadlock
